navbar and product bar z-index problem fixed

--- a/src/components/products-bar/ProductsBar.css
+++ b/src/components/products-bar/ProductsBar.css
@@ -8,7 +8,7 @@
     position: sticky;
     left: 0;
     top: calc(0% + var(--navbarHeight));
-    z-index: 9999;
+    z-index: 999;
 }
 
 .product-link-activated{
